--- a/video.html
+++ b/video.html
@@ -106,7 +106,7 @@
                                                 </a>
                                                 <ul class="gnb-sub">
                                                     <li class="gnb-sub-item">
-                                                        <a href="video2.html" class="focus-sub">비디오 템플릿 스타일</a>
+                                                        <a href="video.html" class="focus-sub">비디오 템플릿</a>
                                                     </li>
                                                     <li class="gnb-sub-item">
                                                         <a href="card.html">카드뉴스 템플릿</a>
@@ -154,19 +154,20 @@
                     <article class="content-wrap">
                         <div class="alert">비디오 템플릿은 최대 3개까지 생성이 가능합니다.</div>
                         
-                        <div class="content-inner">
+                        <div class="content-inner video-inner">
                             <h3 class="content-title">
-                                비디오 템플릿 <span>나만의 스타일대로 템플릿을 꾸며보세요! 설정한 템플릿은 숏폼에 반영됩니다.</span>
+                                비디오 템플릿 스타일 
+                                <span class="title-descipt">나만의 스타일대로 템플릿을 꾸며보세요! 설정한 템플릿은 숏폼에 반영됩니다.</span>
                             </h3>
 
-                            <div class="content-item template-item">
+                            <div class="content-item template-item template-fit">
                                 <!-- 최근 사용한 템플릿 -->
                                 <div class="recent-wrap template-wrap">
                                     <div class="title">
                                         최근 사용한 템플릿<span class="date-view">25. 03. 04</span>
                                     </div>
                                     <div class="tamplate-box">
-                                        <a href="#" class="tamplate-edit">
+                                        <a href="#" class="tamplate-edit template-100">
                                             <div class="templaete-inner">
                                                 <div class="templaete-img">
                                                     <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
@@ -189,7 +190,7 @@
                                         <!-- 지난 템플릿1 -->
                                         <div class="past-item tamplate-box">
                                             <span class="date-view">25. 03. 04</span>
-                                            <a href="#" class="tamplate-edit">
+                                            <a href="#" class="tamplate-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
                                                         <img src="img/template/past-img1.png" alt="지난 템플릿1">
@@ -206,7 +207,7 @@
                                         <!-- 지난 템플릿2 -->
                                         <div class="past-item tamplate-box">
                                             <span class="date-view">25. 03. 04</span>
-                                            <a href="#" class="tamplate-edit">
+                                            <a href="#" class="tamplate-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
                                                         <img src="img/template/past-img2.png" alt="지난 템플릿2">
