edit: 메뉴 아이콘 이미지 추가

--- a/video-making.html
+++ b/video-making.html
@@ -192,7 +192,7 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/past-img1.png" alt="지난 템플릿1">
+                                                        <img src="img/template/layout-16_9.png" alt="레이아웃 비율 16:9">
                                                     </div>
                                                 </div>
                                             </a>
@@ -209,7 +209,7 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/past-img2.png" alt="지난 템플릿2">
+                                                        <img src="img/template/layout-1_1.png" alt="레이아웃 비율 1:1">
                                                     </div>
                                                 </div>
                                             </a>
@@ -226,12 +226,12 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/past-img2.png" alt="지난 템플릿2">
+                                                        <img src="img/template/layout-9_16.png" alt="레이아웃 비율 9:16">
                                                     </div>
                                                 </div>
                                             </a>
                                             <div class="layout-descipt">
-                                                <div class="ratio">16 : 9</div>
+                                                <div class="ratio">9 : 16</div>
                                                 <div class="detail">
                                                     숏폼 최적화로, 더 높은 <br>
                                                     시청 완료율을 얻을 수 있습니다.
