--- a/video-making.html
+++ b/video-making.html
@@ -243,8 +243,8 @@
                             </div>
                         </div>
 
-                        <div class="template-addBtn">
-                            <button type="button" class="addBnt">템플릿 추가하기</button>
+                        <div class="templateBtn-wrap">
+                            <button type="button" class="templaeteBtn">저장하기</button>
                         </div>
                     </article>
                 </section>
