--- a/video.html
+++ b/video.html
@@ -226,8 +226,8 @@
                             </div>
                         </div>
 
-                        <div class="template-addBtn">
-                            <button type="button" class="addBnt">템플릿 추가하기</button>
+                        <div class="templateBtn-wrap">
+                            <button type="button" class="templaeteBtn">템플릿 추가하기</button>
                         </div>
                     </article>
                 </section>
