edit: 클래스 수정

--- a/video-making.html
+++ b/video-making.html
@@ -179,7 +179,9 @@
                                 <div class="preview-wrap template-wrap">
                                     <div class="tamplate-box">
                                         <div class="templaete-img template-fit">
-                                            <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
+                                            <div class="mockup-img">
+                                                <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -192,7 +194,7 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/layout-16_9.png" alt="레이아웃 비율 16:9">
+                                                        <img class="img-item" src="img/template/layout-16_9.png" alt="레이아웃 비율 16:9">
                                                     </div>
                                                 </div>
                                             </a>
@@ -209,7 +211,7 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/layout-1_1.png" alt="레이아웃 비율 1:1">
+                                                        <img class="img-item" src="img/template/layout-1_1.png" alt="레이아웃 비율 1:1">
                                                     </div>
                                                 </div>
                                             </a>
@@ -226,7 +228,7 @@
                                             <a href="#" class="select-box">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
-                                                        <img src="img/template/layout-9_16.png" alt="레이아웃 비율 9:16">
+                                                        <img class="img-item" src="img/template/layout-9_16.png" alt="레이아웃 비율 9:16">
                                                     </div>
                                                 </div>
                                             </a>
