--- a/video.html
+++ b/video.html
@@ -170,7 +170,7 @@
                                         <a href="#" class="tamplate-edit template-100">
                                             <div class="templaete-inner">
                                                 <div class="templaete-img">
-                                                    <img src="img/template/recent-img.png" alt="최근 사용한 템플릿">
+                                                    <img class="img-item" src="img/template/recent-img.png" alt="최근 사용한 템플릿">
                                                 </div>
                                             </div>
                                         </a>
@@ -193,7 +193,7 @@
                                             <a href="#" class="tamplate-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
-                                                        <img src="img/template/past-img1.png" alt="지난 템플릿1">
+                                                        <img class="img-item" src="img/template/past-img1.png" alt="지난 템플릿1">
                                                     </div>
                                                 </div>
                                             </a>
@@ -210,7 +210,7 @@
                                             <a href="#" class="tamplate-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
-                                                        <img src="img/template/past-img2.png" alt="지난 템플릿2">
+                                                        <img class="img-item" src="img/template/past-img2.png" alt="지난 템플릿2">
                                                     </div>
                                                 </div>
                                             </a>
