edit: 사용가이드 아이콘 수정

--- a/video-making.html
+++ b/video-making.html
@@ -183,9 +183,9 @@
                                                 <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
                                                 <!-- 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
                                                 <div class="mockup-content">
-                                                    <div>제목</div>
+                                                    <div class="title">제목</div>
                                                     <div class="ratio-change"></div>
-                                                    <div>자막</div>
+                                                    <div class="subtitle">자막</div>
                                                 </div>
                                             </div>
                                         </div>
