--- a/video.html
+++ b/video.html
@@ -157,7 +157,7 @@
                         <div class="content-inner video-inner">
                             <h3 class="content-title">
                                 비디오 템플릿 스타일 
-                                <span class="title-descipt">나만의 스타일대로 템플릿을 꾸며보세요! 설정한 템플릿은 숏폼에 반영됩니다.</span>
+                                <span class="title-descript">나만의 스타일대로 템플릿을 꾸며보세요! 설정한 템플릿은 숏폼에 반영됩니다.</span>
                             </h3>
 
                             <div class="content-item template-item template-fit">
@@ -166,8 +166,8 @@
                                     <div class="title">
                                         최근 사용한 템플릿<span class="date-view">25. 03. 04</span>
                                     </div>
-                                    <div class="tamplate-box">
-                                        <a href="#" class="tamplate-edit template-100">
+                                    <div class="template-box">
+                                        <a href="#" class="template-edit template-100">
                                             <div class="templaete-inner">
                                                 <div class="templaete-img">
                                                     <img class="img-item" src="img/template/recent-img.png" alt="최근 사용한 템플릿">
@@ -188,9 +188,9 @@
                                     <div class="past-container">
                                         <div class="title">지난 템플릿</div>
                                         <!-- 지난 템플릿1 -->
-                                        <div class="past-item tamplate-box">
+                                        <div class="past-item template-box">
                                             <span class="date-view">25. 03. 04</span>
-                                            <a href="#" class="tamplate-edit template-100">
+                                            <a href="#" class="template-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
                                                         <img class="img-item" src="img/template/past-img1.png" alt="지난 템플릿1">
@@ -205,9 +205,9 @@
                                             </div>
                                         </div>
                                         <!-- 지난 템플릿2 -->
-                                        <div class="past-item tamplate-box">
+                                        <div class="past-item template-box">
                                             <span class="date-view">25. 03. 04</span>
-                                            <a href="#" class="tamplate-edit template-100">
+                                            <a href="#" class="template-edit template-100">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img">
                                                         <img class="img-item" src="img/template/past-img2.png" alt="지난 템플릿2">
