edit: 사용 가이드 헤더 아이콘 수정

--- a/video-making.html
+++ b/video-making.html
@@ -203,7 +203,7 @@
                                     <div class="template-fit layout-box">
                                         <!-- 레이아웃1 -->
                                         <div class="layout-item template-box">
-                                            <a href="#" class="select-box ratio-16">
+                                            <a href="#" class="select-box ratio-16 b-show">
                                                 <div class="templaete-inner">
                                                     <div class="templaete-img template-fit">
                                                         <img class="img-item" src="img/template/layout-16_9.png" alt="레이아웃 비율 16:9">
