--- a/video.html
+++ b/video.html
@@ -43,7 +43,7 @@
                     <ul class="right-content log-after">
                         <li>
                             <a class="guideBtn after-item" href="guide.html">
-                                <img src="img/menu/guide-icon-atv.svg" alt="사용가이드 아이콘"> 사용 가이드
+                                <img src="img/hd-guide.svg" alt="사용가이드 아이콘"> 사용 가이드
                             </a>
                         </li> 
                         <li>
