edit: register-form 주민번호란 추가

--- a/register-agree.html
+++ b/register-agree.html
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn" onclick="location.href='registe-form.html'">다음</button>
+                        <button type="button" class="finishBtn" onclick="location.href='register-form.html'">다음</button>
                     </div>
                 </div>
             </div>
