--- a/register-form.html
+++ b/register-form.html
@@ -75,6 +75,18 @@
                                 </span>
                             </label>
                         </div>
+
+                        <div class="m-top40">주민번호 입력</div>
+                        <div class="input_container m-top20 residentNum-input">
+                            <label for="fist-residentNum" class="resident-label">
+                                <input id="before-residentNum" class="fist-residentNum" type="text" placeholder="주민번호 앞자리 6자">
+                            </label>
+                            <span> - </span>
+                            <label for="after-residentNum" class="resident-label">
+                                <input id="after-residentNum" class="after-residentNum" type="password" placeholder="">
+                            </label>
+                            <span>******</span>
+                        </div>
                     </div>
                     <div class="btn_wrap">
                         <button type="button" class="finishBtn" onclick="location.href='registe-complete.html'">회원가입</button>
